--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,13 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - assets/hotels/
+      - assets/hotels/popular/
+      - assets/restaurant/popular/
+      - assets/restaurant/
+      - assets/location/popular/
+      - assets/location/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
