--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,5 @@
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
+//org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=2G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.jvmargs=-Xmx2g -Dkotlin.daemon.jvm.options=-Xmx1024M,-XX:+UseParallelGC
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.5-bin.zip
