--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^2.5.0
-  firebase_auth: ^4.2.0
-  cloud_firestore: ^4.5.0
+
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.8.1
+  cloud_firestore: ^5.5.1
+  firebase_auth: ^5.3.4
+  firebase_database: ^11.2.0
 
 dev_dependencies:
   flutter_test:
